# ur5_gazebo_simulations

./: .gitignore  README.md
gazebo_grasp/gazebo_grasp_plugin/: CMakeLists.txt  GraspPlugin.cc  GraspPlugin.hh  gazebo_grasp_plugin.cc  gazebo_grasp_plugin.hh  package.xml
gazebo_ros_link_attacher/: CMakeLists.txt
gazebo_ros_link_attacher/scripts/: attach.py  llm_test1.py  picknplace.py
models/FoodCourtTable1/: model.sdf
models/Small Blue Box/: model.sdf
models/Suitcase2H/: model.config  model.sdf
models/Table/: model.sdf
models/TrashBin/: model.sdf
moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
moveit_config/config/: joint_limits.yaml
moveit_config/launch/: ur_moveit.launch.py
moveit_config/srdf/: ur.srdf  ur.urdf.xacro
ur5_moveit/: .setup_assistant  CMakeLists.txt  package.xml
ur5_moveit/config/: gazebo_ur5.urdf  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  ur5.srdf
ur5_moveit/launch/: demo_gazebo.launch  gazebo.launch  move_group.launch  planning_context.launch  trajectory_execution.launch.xml
ur5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur5_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  moveit_cpp.yaml  ros2_controllers.yaml  ur.ros2_control.xacro
ur5_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  picknpplace.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  ur_moveit.launch.py  warehouse_db.launch.py
ur5_moveit_config/scripts/: follow_pose  picknplace
ur5_moveit_config/scripts/code_template/: code_template.py  template_test.py
ur5_moveit_config/scripts/world_bottle/: picknplace_bottle_low  picknplace_bottle_same  picknplace_cube_high  picknplace_cube_low
ur5_moveit_config/scripts/world_bottle_high/: picknplace_cube_high
ur5_moveit_config/scripts/world_pot_faucet/: picknplace_faucet_low  picknplace_faucet_same  picknplace_pot_low
ur5_moveit_config/scripts/world_pot_faucet_high/: picknplace_faucet_high
ur5_moveit_config/srdf/: ur.srdf  ur.urdf.xacro
ur_description/urdf/: common.gazebo.xacro  env.urdf.xacro  (+4 more)
ur_simulation_gz/: CMakeLists.txt  package.xml
(+38 files in other folders)
